# block

./: dz.py  pyproject.toml
blog/: settings.py  urls.py
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0004_rename_cats_category_rename_cat_post_category.py  0005_remove_post_author_alter_post_slug.py
